[Bug #21994] Drop warning for ambiguous regexp use

https://bugs.ruby-lang.org/issues/21994